# MLTraining

./: .gitignore  README.md
cancer/: CMakeLists.txt  DIAG.rar  DummyClassifier.cc  EllipseClassifiers.cc  NearestNeighborClassifiers.cc  README.txt  RosenblatPerceptronClassifier.cc  SVMClassifiers.cc  cv_common.hh  framework.cc  framework.hh  preprocess.py  start.cc
cancer/data/: training_data.data
cancer/inc/: framework.hh
cancer/src/: DummyClassifier.cc  EllipseClassifiers.cc  LinearFisherDiscriminantClassifier.cc  NearestNeighborClassifiers.cc  RosenblatPerceptronClassifier.cc  SVMClassifiers.cc  framework.cc
cancer/util/: plot_tuples.py  preprocess.py
nn/: multilayer_perceptron.py
petunin/: a.out  main.cc
